fixed text wrapping

--- a/client/index.css
+++ b/client/index.css
@@ -6,6 +6,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 
 :root {
